@@ -56,7 +56,7 @@ logger.log(Level.DEBUG, "GraphicsTrackSequenceData[" + sequenceNumber + "]: " + 
     }
 
     @Override
-    protected void init(MyDataInputStream dis, Chunk parent)
+    protected void init(CrcDataInputStream dis, Chunk parent)
         throws InvalidSmafDataException, IOException {
 
         FormatType formatType = ((TrackChunk) parent).getFormatType();
@@ -118,7 +118,7 @@ logger.log(Level.DEBUG, "messages: " + messages.size());
                 byte[] data = new byte[size];
                 dis.readFully(data);
                 smafMessage = new UndefinedMessage(duration);
-logger.log(Level.DEBUG, String.format("reserved: %02x", e1));
+logger.log(Level.DEBUG, "reserved: %02x".formatted(e1));
               } break;
             }
 
